samples/_failures_safe/1761004556_5fc22c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9467f57.c: In function ‘main’:
./samples/SAFE/__tmp_b9467f57.c:150:5: error: expected identifier or ‘(’ at end of input
  150 |     char*
      |     ^~~~
./samples/SAFE/__tmp_b9467f57.c:150:5: error: expected declaration or statement at end of input
